traefik-ingress/traefik-ui.yml
---
apiVersion: v1
kind: Service
metadata:
  name: traefik-web-ui
  annotations:
    traefik.ingress.kubernetes.io/load-balancer-method: drr
    traefik.ingress.kubernetes.io/affinity: "true"
  namespace: kube-system
spec:
  selector:
    k8s-app: traefik-ingress-lb
  ports:
  - name: web
    port: 80
    targetPort: 8080
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: traefik-web-ui
  namespace: kube-system
spec:
  rules:
  - host: traefik.nick.com
    http:
      paths:
      - path: /
        backend:
          serviceName: traefik-web-ui
          servicePort: 80
